--- a/Conlang Notepad/ssLoading.resx
+++ b/Conlang Notepad/ssLoading.resx
@@ -120,10 +120,12 @@
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="pbLoading.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAAO0AAAAKCAYAAABYDNm1AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAABLSURBVGhD7dlRCQAxEEPB9bIO1r+3Ky30NDQwgZHwvlJ7
-        M/MB7/uD7W4gwAlXtJBDtBBGtBBGtBBGtBBGtBBGtBDmRHu/WuB9VVULRNNVYi3gD4QAAAAASUVORK5C
-        YII=
+        iVBORw0KGgoAAAANSUhEUgAAAo4AAAAlCAYAAADMSmjkAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAAHYcAAB2HAY/l8WUAAADbSURBVHhe7dZBDcQwEATB5WIG5s/tIudxPysNoEYqaSD0
+        nO29fwAAcPOPxrUWAABcvfEoHAEA+CIcAQBIhCMAAIlwBAAgEY4AACTCEQCARDgCAJAIRwAAEuEIAEAi
+        HAEASIQjAACJcAQAIBGOAAAkwhEAgEQ4AgCQCEcAABLhCABAIhwBAEiEIwAAiXAEACARjgAAJMIRAIBE
+        OAIAkAhHAAAS4QgAQCIcAQBIhCMAAIlwBAAgEY4AACTCEQCARDgCAJAIRwAAEuEIAEAiHAEASN5wPDsH
+        AABuZmYeXX7gIttvORAAAAAASUVORK5CYII=
 </value>
   </data>
   <data name="pbLoading.Style" xml:space="preserve">
@@ -136,9 +138,9 @@ Background Angle=90
 Background Border Color=~50
 Background Highlight Color=0,255,255,255
 
-Progress Colors=#bc8f8f|#a37474
+Progress Colors=#0fab9e|#031832
 Progress Positions=0|1
-Progress Angle=90
+Progress Angle=0
 Progress Border Color=~0
 Progress Highlight Color=40,255,255,255
 
@@ -146,38 +148,81 @@ No AA=1</value>
   </data>
   <data name="PictureBox1.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAAIGNIUk0AAHolAACAgwAA+f8AAIDpAAB1
-        MAAA6mAAADqYAAAXb5JfxUYAAAAJcEhZcwAACxMAAAsTAQCanBgAAAbNSURBVFhHxZfZU5NXGMb9N3rV
-        VQHBHZElEJKQhKxs4oYbuNW94lovOvoX9KLtXafV0sG6AmIigglL2CICigKy1eoUTBBBIAFke/q+50sY
-        bDKTcTpTz8wDF3zwe57znfM+YQmAjyrxJf+TGAcJ/7Mciw3gz/Mb3lPft6RzpLOx6D1DOh2HnlOkk3Ho
-        zo9H14kEdB2n78cS8OyoDJ2HE9BxSIaOrxPRfiART/eT9ibhyR45nuTK8Xh3Mh7vSMaj7Qq0blMIE8EN
-        +MHnfGBSD8MZzDpB0G9Ixwl8TEbwBHQSuPNgIjoI3H4gSYCf7iF4nhxtuwm+i8AMzyH4VgVatiiDGYh9
-        L3WfP/XpWHRz8nw/nMGcmsC+1O0Eb6fkT/cl4okvdRun9oO3J6M1R4mWraTNKjzMVgUakOAMjqPUJIaS
-        /suaeu1C4xY5mrdIqZs3MTwFTZkpQQzwu2ZRagEX71oy0F9y9YPlKi/FxKAL5ekJaNyoQDOlfrhRgj9I
-        VwcaWJy6hw4Zw7vpXfPqL72BAcstDNbYQquqQjzvum+Fx/0KJfp4ODKS0ZRF4Aw1HqSp4TRrAg0sHDSG
-        87sWhyyBH8KrsmLMzUxjuK9DUm8Q9XSSOjDyvAdvmurhriwTBopTE1BjVorUDwjsNGnQaNAGMeCH0yHz
-        w58dkfFDcFfdw+TIECrP5MBxbgdqz+5E7emdcJzehZpTpHzWblSfyEXjxZOYoq0frK4QBoo0MlQZlQLs
-        NGjQoNeiPjU10ECX/3r5wM+OSNeLl8tmwWhnG6bH3obU1JAbI4+a8LrOLgzcVMlQqVOhgeE6gmtTUafW
-        BTFAqbv4aomhQgPlIF0vute83NXlmJ+dhcf1t5DX993z6l8a6IfX7cJYdweGGqrpGRduKmSwa1MotRZ1
-        BK8leK0yiAHpXhOcpxnfazHNkvghvHlQCy9dqZJtSli3q1CWo8bdrWpYt2hg2UTK1uJOlhalmVpU7N+B
-        Ge84nYM6YeCGPBG2FDXqNARXkZR6OJL1gQZE6kPSQBHwfTzN5PwQhhprMNH/EvMzMyE16/XAQwdxuMUp
-        DFxPTIJNoYFDpYNDoUONXI/qJEOggYUZzuBFM5zXm+YG6RbQSR9ZrG7WM6HhLklv+/owxj9ra6bX4sLV
-        BDkqkrWoodQCnmhAlcwYaKCdy4PgYowumuG8RttbMTk8hPIjO2E/motKkv1ILmyHSQfzJB3YA9v+vXCc
-        PYPp0RGMdjwSBv6ITUa5jAxQ6moZweMNqIwzBRoQM5zBudRa3Fw7aX5Tc/F6Swb4FcxOekNqZnwUnhe0
-        C93tGCcDV9Yn4158qkhdGUeKNaEyJpgBkZrBClEgrdRcXB68RumP8S0YH5BO+nvq78f4InnpvU+6BzDe
-        1yUZiFagbINOwO0Et683wxZtDjTQxs1FqUVfM5zKo2WzZMDzshfeQTdupGlQnKbFbbMOt016lBj1KDYY
-        UKwzoEhrxE2NEXdz8jD3bop+p08YKFyrxN0YPeyU2h5tgm2dGffXpAUaEKkJzqmb/c1F5cGLDUyPDmN+
-        bi6k5qbf4d3wILz9f9GOufD7aiUs0QbYKPn9dWkCXrE6iAH+lCKlVgk4lwc3Fy/vwIsP1oSbXgkZKFhJ
-        BtYYcH8tg9NRsSod5SvTAw34+7qZK5PhGSlwUoHwmhzsD6mpIRcNoDHMTk0siA38FqVC6SqjSM3geytI
-        kUEMiC33gbm5nGY1GqlAeE29cYfU7IQHD3/8GbaTF2DPZ11ExcHzKIzUoHSFyQfPIHgGypZnBhrw97XT
-        19eNRhI1F693o0MhNT87g1tZeXj80yX0Xreg95oFzu++x41IPSxRZh84A3cjSGHBDHBqOuWcukHPzZUq
-        movXtIeaLoTm52ZRlJ6Ht93P6SBOYaD2Ia6vy0DRciMsy9N98EwBty7LCjTgNNGW+1JzX9dzeVBz8ZqZ
-        HAspcoBryq3CwHNLJS5F6nAlLBUlEWkLqa3LJLhl6cZAAw30KaWe+5prkyuTyoOb60PWFflmNF34AYUR
-        OhQu06Eo3AxruB+eBetSgn/JCmJgoa9TuDK5ubg8DDTHU3F9vQoFaxUoWKNEwSolLtPVuhxFilRSUhV+
-        jVDhl7AUFIRrcTPCiFvhJpSEpcEaRnBfautXEvgO6/NgBtT0SYUrcxGcm8ser0dZrA531pOidShdS1pt
-        wO1VBpSsJK0wojiStNyE25T4TkQ6rLTlVv+Wc2o//AsJXvpZEAO85Qtgaq4q0VxcIFQeNMNtMdIMt/E0
-        8w0VcbWi+F5LV0scsnBKG0Yi+ALYl1qCZ6P00+wAAx/jn9PaBQMfT1jyD2dsDmBPGykqAAAAAElFTkSu
-        QmCC
+        iVBORw0KGgoAAAANSUhEUgAAAFwAAABcCAYAAADj79JYAAAAIGNIUk0AAHolAACAgwAA+f8AAIDpAAB1
+        MAAA6mAAADqYAAAXb5JfxUYAAAAJcEhZcwAACxMAAAsTAQCanBgAABEUSURBVHhe7Z15VBRnuocLMbgb
+        NUbjePREM3rU0Xi9Ny43RhMzYxwzzjVXE6MxmmgmyagzUScaF3BENhX3XRM3lEVwA0RAEQSRRfZml9UF
+        XEEFZBF0fvN+H3SnGgrobrq6G8Y659GWP6T78eOt91ffW6UA4CUGRPKLL5EPyS++RD6EA/SLMRGsrc2J
+        /yO2Ee6ERzPGmVhOtBPqO6QkGAp6Y+8RaYOPHcMX0dFYpkiCdVwi7GMVsItRwJYRXY1NDesYUQpYE2uV
+        XFPgn9cSOGtqsIpMgCUjIgGra1glYkU4I57zUw3Lw6pZRvwo4h+Mq/FYejWumtA4LAmNxWIRPxCLrkRj
+        9DE3CN9+G0tqpaVLiTAEJPqrVzdvrlqYng76MyJKKnGjoBy5RM7DMmQRmQ/KkHG/DNeJ9HtlSCNS75Yh
+        mUi6U4ZEQpFfhoT8UsTnlSKWiLldiuhbpYgirt0sRcTNpwi/8RRhxNXcpwglruQ8RXBOCS4TQdklCCQu
+        ZRUjgLiQWQx/wi+zCL4ZRThP+FwvwrnrT+BNeKU/gWf6Y5whThOn0h7hJOGRVgj31EI4J99H67XW6Ny5
+        83kHB4e2NZp/PWqLMAQke0bXrVtf2BYWctmKomfNQzbRkOwTqQU4knQPZitXwtzcHPb29qU2NjYbSPwr
+        NboNL5xk92nj4FBkU1DAZccXi2WXm7zssw3IdiX+ERAFYfZsdOrUCadOnQLJxqJFi9J69uxpYSzhR6aH
+        hXHZQWVVLUq2S+pDDNl7EMKgQfjggw9w+/ZtBAcHc+mjRo0KJ91mklLkgmT37ejoWLW7qooLzyk0vuyL
+        epRtGZwAYcECCGZmWL16NaKpEWDS9+7di1mzZpEA4RNJMXJBwjf9mf7F6TWCSqvqyiZqy04xtGxCF9nO
+        KQ8xcPcBvrrffPNNeHl5ISgoiAt3dXVlZYUJd5cUIwcku8srdnYlW0pLufBMWt1MdnZTZBOmInt5YAxr
+        B/nqtrS0hLe3NwIDA7lwNzc3/PDDD0x4jKQcOSDhy8b7+HDZ/uVVepUdKSWbMJTsYykP0H/nXgi//S0G
+        DBjAZZ87d061wkXCEyXl6BuSbWG2bl2+sg1MeVShk+w4A8tm7Z+UbDeR7OMke0nANQjz5zOhsLa25rIZ
+        ly9fNprwuf914gSX7V3xvEXJdqKg02fbLghUtwcPHqySzUhISDC8cJJtRiSuoG9Mf0bc44oWI5uVkgX+
+        YRDmzuWre/369fChsqnkwYMHRhE+qf/Bg1z2ycoXssoOMbDsQ8l38caW7RD69MHw4cPVZEdGRqKkpMQo
+        wgNU10sowjdJNmEqso+m3Mdfzl/hqZKt7s2bN6sJv3//vuGFk+wRPXbuxP5//QsuVS/0I5vQRjZLkXLI
+        Pph4F90dN0Po1QsjR47E+fPnVYSHh6OiosIowo/Njonhqzu4uFJSdrIusgnDyS6oI/sInSjnegdB+Pxz
+        mFHfvZMWlVj4nTt3DC+cZKvF+DRa3fLLLjGI7AOKfHTd4AihRw+MHTsWvr6+KkJDQ7lsYwhXxfiAkkqd
+        ZL/Ruy86vdpFYzo2ROdfmTrvb1rLdqqRfTj5HmZ5BkCYPp2v7n379qkJZ4INLpxksxhfrIzxyQ/KdVrZ
+        HTt1Zm9S7/xx1nwu+7QOsvcp8tDZYT2E117jVwT9/PxUhISEoLy83CjCl42nxp9e43xplc5lZLSPH972
+        OleHYY3iXYehIuaHRGsguzqyi2UfIj497Qdh6lS+wXCQ2l2x8Bs3bqhkG0w4yWYxPk8Z4+MeljcqO1ZC
+        NrsYxUS9deaM3vnycuSvsgmlbHZ9pCHZu+JvooOtPYSuXfHhxIk4QydIJb6BgSh8+hSP6KdaSUFRkUGE
+        zx1O34Be42z5c51lS50gWYqs/wRZrNEJUm1layH7IIWcqR7nIUyZAjNa3f1Wr8ZA6r2V/MnLC99RRybG
+        RqGQVzjJZjFeoYzxkQUVJi67UGPZ22NvoL31OgidO+ON997Du7t2qXh//36sSEjAqsRENXakpsouXBXj
+        3Z+9MIhsliLllv1z0l1MPuEFYdIktGnTBi4uLrhw4YKKjIwMiGu3wWo4Cb+4IC2NC7/y+FmLkb05Jhtt
+        /7kWQocOmDZtmppstsnwlGq3wYWTbFWMd6YY35DsM6GJ2O3qg10Ml3PYSWx3rmYbsZVx3BtbiE3HqnF0
+        8sZGJy9sqGE9YX+0GjvC9ognx4ZYd/gsrGtYS6zhnIEVYXnoDLb4RGgs+0DSHUx0OQPh979H27Zt4eHh
+        gYsXL6pIowUmJZsht/Bjs6Oj+eq+9KSSXx+pb2V/tfBH9s2Nxh9mztNY9sboLFhYWkFo145vBAcEBKhg
+        q5tJlZLNkE04yVaL8Qqq3Q2VkVV7jmL8p1+oGCfiPSXTv8DYGt6txf9Om8UZU4vRIkZNm6liJOP/q3mH
+        mOOwUyT7Qb2y9xPvH/eAQAGnA5WTM9RSioWnpKTUkSxGTuGbply+zGX7FVc2WrOXhsdL9seGYmZQhEay
+        7a9dR+tVqyDQiXLCZ59hnbu7ChsqLX65uQi6c6dewvPz9S+cZHexsLcvUsb42LvljZ4gdyly8JcrUfhG
+        xPyQaubV8HUw4xq+EjGXmKOEwgsLMIzZIr4IqmYWSWUwuYzPOeGYQSyPSGlU9r6kfLzr5AaBWkDz9u0x
+        aMMGDNm+XcUEkli7766NLH04CVfFeO+SqkZls26EbSBo1I0Qym7ET8NuhF2MarwbeYCjjci2jkhFq+U/
+        QbCwwFiq3YtdXdVwSk+Hx82bDeJH6FU4yWYx/rYyxkfeL1OTza6PNEfZe5LyMPKwM4QxY9CVYjy7xs1O
+        kErY5rBUza6N3ms4CVfF+NNlVTrLvmxE2b9IyLa6mgyzH6mTat2aT0yx+RIxBQUFamLrQ6/CSTaL8QnK
+        GB/6oLwe2b9ORTUH2bsT8zDiFycI77yD7t27w9/fX012XFycmtSG0LdwVYx3q3hucrJddJS9IjQBZosX
+        QzA3x9KlS/kwjxg2+iAlVwp9C7/w15oYH1hYoXfZLLJrIvukHmXvSryNoQcOQxgxAr169eK9tlh2DHUe
+        UmLrQ2/CSbYqxh+vfNFiZP8YHAfh73+H0KoVRn7zDT47elQNq4gIbKHuRFOOZmToTbgTuwmKXsP/0TMj
+        yX6kvWyiPtk7iUH7foEwbBja9OiBYbSg3t69W8WYw4cle+2G0EsfTrLVYnw01e6WIPtvQVEQFi7k48aL
+        Vq6EM50sxURmZSHz8WOtyKZuRh/CVTHe50mlCcu+X6/svbVkb0+8hf6790EYPBj9+vXjt4lcuXJFRVRU
+        lNrmsKY0uYaTbLUYH5FX1iJkfx8QDuH77/nqtrOzU5PNuHXrVh2ZmqAP4cvG1cT4s8VVdWSzDQQp2SxF
+        mqrsrYk30XfHHggDBmDgwIFcMBvmUcKGMnVZ3YwmCSfZajH+yp0yvchmvbaxZG8j2d/4h0KgjoRkwNHR
+        UU02o/bogzY0VbgqxnuUVhlXdqp+ZG9R3MRvtu2E0L8/hvzud7gYEqJGUFgYCkiaePRBG3QekyDZLMbH
+        K2N84L1yk5LNLrNqK3sryZ7jGwzh66/56h6wZAn+e/9+NaZ4e0u2e5qic1tIslUx3rX8ebOVvUMke1NC
+        Lnps2Qahb190GzQIHx05osYfnZywPC6uzuiDNug8JkHC/ZUx3v9huZ5lP5GUza6PyCV7i+IGZp67BOHL
+        L/nqZgOZYVQ+xGRR3y1Vl7VBpxpOslUx3olivLFksyt/+pK9MSEHr7Fh+t69MWbMGD5ALyaCIjyTJSVR
+        G3QV7jSLGn96DZ/CiibJ9pFJ9s9ayN6kyMV0rwsQZs7k48aHKbIzwWIyMzMlBWqL1sJJNovxlcoYf5Vq
+        N7vVQ0p2oCFk14wzNEW2Q3wWumx0hNCzJ8aPH19HNuu7i6i7kBKoLboI3/SnoCAu2/PxMxOXnd+obEdi
+        6llfCJ9+ilatWvGRNSZYzPXr1yXl6YJWwkk2i/FPlDE+hPru5ip7M8Fk28VlohMbpu/eHSPefx9bfX3r
+        4JuTIznyoAtajUmQ8GXjqA+l1zhVVCktm2hMNjtJmoLsjYocfHzqHIRPPoEZre7h9vYYfeiQGhNPnpTs
+        p3VF4z6cZLMYf0sZ4y/dLtOf7HTjyF4Xex0d7KqH6d/+8ENY0mKqzRHqm6XGHXRF4zEJEq6K8SdKqkxA
+        9j1J2Xs0lL2B+Mjdkw/Tt27dGp6envySq5hUki1Vh5uCRjWcZPMY/9OtW1y4f36ZlrKre21Tkr02Og3t
+        bGz4MD0bN64tm6Hp6IM2aCpcFeOdy57rJJudJE1F9vqEbExwOw1h8mRYWFjwoR72aCQxycnJksKaiqbC
+        /f9KP15MuM+9cr3LZneMGVK2ZVQK2qy1htCxI2ZS2GE777XRZvRBGxoVTrJVMf7osxfNXrZ9QhbGuXhA
+        mDiRD9OzAfraspOSkiRl6QNNhKtivOfDimYve2VkEiys1kBo3x7DqB2cd+pUHdZQ2JEacdAHDY5JkGwW
+        458pY3wg1W5J2eL710Wy2SNCtZHN7vIVy2Y77PqUbUeMYc+BnTAB5u3aYfSePRjr5KTGB66u+JZquFQP
+        rQ8a7MNJuCrGnyp8xmWzJzOYmuztGspeFqGoHqanUvL5vHnwCgurw7XsbMnxBn1R75gEyWYx/rEyxl+8
+        8bRZy7ZNyMQ7R50hjBvHHrrLN4bZEKaYxMREnTeHNaXeGk7CVTHe/Umlicq+pbHsJWFxMF+xgg/Ts3Hj
+        2rIZeXl5kpL0iaRwkm1mZm2do3z4rt/Np0aRzTYQdJXtIJK9Lj4Db+7eC2HUKHTr1o3v3sTHx6vBVndZ
+        WZmkJH1Sn/Bhffbv57KPUCto6rLZZdb6ZNsQ491OVj9lrVUrrFy5so5sBpMgJUjf1Cd8wpDjx7lwJ0qW
+        mshmm76mJntNbHp13WaPI6UT5cjRo3GVOpDw2Fg1IqicPCwulhxr0DeSYxIk/FULW9sS9uQ1+0ePsDfj
+        Lg6k5HP2E/uSGXnYS/AByKTb2EXsZHAx1aMHXA6d1LZwqgVtJkHsx7+6BORyUQ412PO6m02ymLAs2MRn
+        wTo+E2s5GZw18ddhFZ/OsSRW1bAyLo1IxU/E4qgETDnnh66Om/jFKeGVV9Dprbfw7s8/Y7yzcx2mUrSX
+        auHkoN62UFi4cJIwZ06l8N13aHawqanJk/nT1dgeZb+PPsJUFxdMO3myDtMp6CyjVb5KNMogJw2OSdAx
+        lvAlYuSmS5cud/v06YNhw4Zh6NChGDJkSJNgD2lkt2W7u7tDQauqPpoytqYL0jXcCIeDg8P6HTt28DfD
+        dshZ12AIiql2S4mRi/9o4bm5uZJS5MRkhbMrdnKjr9EHbZAUTt2gwVAehhaenZ0tKURuTFJ4MAk5EBIi
+        K+dJuNQYg9xIjklIiZEL5SEWvi8iAh+eOCEbH3t6SvbIhkCyD5cSIxfKQyzcj96UQ2CgbOh79EEbJMck
+        pMTIhfIQC2djwWwTVw70NZSpKyZZw5lw9igjOZBj9EEbTEm47datW/mbYR2ElKymUt+zBA2JUrjoP04y
+        mvB5BNLT03GT6hz7XUpaU5Br9EEbCgsLufA9e/bwEQ366DGSYuRCeZDs7ra2tmVsXJjddMpg4vUF+/vY
+        U+qNSX5NS3jp0iX+n9+xe0Dpo7tJipEL8bF8+fIF9vb2OHToEN9zlBo/a86w4X52MY3JnjFjBvvwjMmS
+        YuSi9jFp0qRNS5Ys4W+qJWJlZcUf6s6G/+njOvMPLSVGLuo5Pu7WrVtG79690ZJ4/fXXlaILiNWEOfuw
+        kmLkQuqgOsehow/xPy2MQUS1aOUhJeYl8iH5xZfIBYR/A6AjQBRy4njiAAAAAElFTkSuQmCC
 </value>
   </data>
 </root>
