--- a/Conlang Notepad/Dialogs/dlgUpdate.resx
+++ b/Conlang Notepad/Dialogs/dlgUpdate.resx
@@ -186,43 +186,40 @@ Pressed Highlight Color=$0</value>
   </data>
   <data name="PictureBox1.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAADAAAAAwCAYAAABXAvmHAAAAIGNIUk0AAHolAACAgwAA+f8AAIDpAAB1
-        MAAA6mAAADqYAAAXb5JfxUYAAAAJcEhZcwAACxMAAAsTAQCanBgAAAgXSURBVGhD1ZlrUJTXGceJ6Reb
-        D5127Od+aDLTGUN17CRQk5i0anVKhS2IGkBrvE2IjGGiCRjIyAhdAxIEzVKgBKjiLRhAwl3uKDe57YUF
-        dhcJEkQhaGSXhYD673NedpldPMu+7wrO5MNP3087v+c5z3ve/zm4AfhZ45ZK/zwrblFRvyHeJjYsMeuI
-        X/r5+blZ4QqJhX7sxV/Fx8tldXU/fWgwIFJnwGe9s0RaiLDwaY9+jqPds4TPI8zCJwytDh/bcIT4SNOL
-        PygUzSQ+VwRXTCy/TUpKPDYygpKpR9CNTaFv1Az9iBk998zQ3jVDM2yG6o4ZnUMTaP9+AjcHJ9B8ewKN
-        Aybc+M6Eun4Tam4ZUdVnRIVhHOX6cZQSxbqHKOz9EQVEfs8D5BI53fdxuXsM73yZir1795rlcvmOZyqA
-        uu+xR6V6Qs/oG5sU5HUO5NueQf4bG3lF2wBWHwzBoUOHkJGR8WTz5s2hXDkx/C4tLT/lyRNcN07DsIjy
-        31rk8+bJX9T+AK9zOfD294dCoUBtbS28vb0fceWcQd1/Jait7TE9Qz9fnsRVQyRP4m0kbit/fQH5Iov8
-        VQfyiS23qPsHERAQgKamJtTV1UEmk/EFnbEiMTHty5kZVJmmZ+VJXEtdt8p3WOVJ3Jl8yULy2ln5812j
-        2Jh5ATLq/okTJ6DVal0vgLq/QlZfb6ZndDuTH3Am/5Ajf99OPpvk45r1WPP++wgKCkJ+fj4GBwddL+Cl
-        2NjoLyYmUGaacSrf4EC+TIL82a4R/DX9LGRbtyIuLk6Y/dHRUdcKoO4v31BWNkrPUI1MzskrefIkvhjy
-        /27oxp8OHMCuXbtQUFCAgYEB1wt48fjxg9FjY/jWPONQfpPPNqrUTTRp1WqH8lmae3grNQP/pO4nJCSg
-        pqYGk5OTrhVA3V/mmZenp2fcHJ3iyjdR53fWNOL3ubmi+Up1Z07+wjz5Y9c1eG3fPuzevRtFRUXo7+/H
-        1NSUywX4hdHLc2XykUN5YWxoZKxjU0ljc22hsSFxR/Jfae7ijeRU+FL3PcLC4H7mDPa1tOBAayuu6nTS
-        C1iZnd1I/6OeIsNSymda5I/WdcJjzx4WG1BSUgIDZS3WfZdWgLr/xgc9Pbgw/dhOnjfTUuHJ/1czDI8k
-        BXz9/JCcnIyqqipM0M7ncgHW2FB5/6c5+RbqPG+mpcKT/6iqDX9+7z0coN2nvLwcOhoZq7zkAqj7Lwe1
-        tgqxoZ1lG4u83djcMqF6/tjQyDgam0sOxobJp6jv4LWERFDSxOuRkXj19GnsoejAZt+KpHfAGhtKfpxe
-        Wnn1rHxIRRPepF0nODgYlZWV6KHRte2+pBWg7q+gw4oQG27S6MyXr5Ug/zWFMlv5/9nIp1nkFervsSYu
-        Xuh+VlaWsO+Pj4+7XgDFhuMsNhQ8nF5y+WSS3192HevoixsSEoLq6mohtM2XF10AdX/5htJSITY00M4j
-        Sb5nVv6KBPnTyttYLf9c6L5HTAxWUeb/140bdrMv6R2g2PABiw3fGGdI3iTI1wvyxkWXP6MaxO7iWryz
-        cydCQ0OFwNbV1cXtPsPpClD3l3nm5gqxoYa+unbyJM6TZ6coJs/Or+Lkh4SZZ/KnlANYFR0jdP/y5cuC
-        3IMHD7jyDDEF+LLYcMn8aEF54fxqkc93IH/ORj6dI5+kuo2Awiqsp6x/5MgR1NfXQ6PRcMWtOC3AGhvK
-        7k4uufzJjn788ViU0H1PyvtrUlIQSCPEm30rC74D1P21wd3dODf1mCs/d3PgUP4HUfKJJJ9Ao+N/tRwb
-        AwMRHh6OG/TSqlQqbtdtWXAFrLGhkCKzrXz5M8nf4cp/3tEH98jPsJUSJzusNDQ0CHI8aVscFkDdfznQ
-        Ehtq+p3Jz144iZH/D0c+XvkdZHlF2BQQgIiICDQ2NkKpVHKF5+OwAGtsyKPILFX+vAT5k8p+xLTr4H70
-        KPyo+2uTkvB6ejq2U3Tgzfx8uO8AdX+FjyU2VNKHqsIgRX50Tj5DkB9eUD5WeQteOQXY/O67iIqKQnNz
-        s+juM7grYI0NORSZXZe/+5T8aY58VGsP3D8Jw7Zt23Dt2jW00ElreHiYK8vjqQKo+8vXW2JDGe08YuSF
-        CydBfoTk74mWP9HZh79dysPfd+xADEWGVhoJtvOwwzpPlsdTBVBsCGax4SKFNjv5XhflVY7lI25q4X74
-        MHz9/fEW7flrKXVupUMLb9YdYfcOUPeXeVhiQ+Ftk8vyqSLkYzoN2HDhCv6xfTtiY2PR3t4uufsMuxWg
-        ArxZbDg3MSNJPsuJ/Be0TVrl5Rb5w42dWP1hKHbQ+LDIwAoYGhriSi6EXQG/TkhQpFD3c0amHMpbb4jt
-        5LtIvovkNSSvscy8muTVJK8ieRXJq0heSfJKA8LbtFh18qRwSXXq1Cl0dHQI3TebzVzJhbAr4BfR0T7r
-        CwunN9FusFRszMvDKpp7H5p77/378fbZs1iXnQ3f0lLujDvjqe8ABSkfwsgC1VLB7jbj4+OFXYft+Wq1
-        2u6qRAp2K0A/7jJyufw8O3Qz2DhIgV2R8+TEsOgF9Pb2Ch0VC8v7JpOJKyeGRS/g04oK/OXiRdHIiou5
-        sy0Wu3eANiDJrFy5UsB2BVhXxWI0GrmdFYvdCvAEnWFTQHo3HX70er1wCBcD+wMFT0oKrAB28N+yZQtf
-        0Bk2BQQV0ziwF/J5wprALr48PT35gs6wKeCF0NDQwiTK85mZmc8NFkO8vLxADjNcQWdYC7DwAhFL3CfY
-        jz4v7hGBXMGfD3D7P/M+KkKwZnhoAAAAAElFTkSuQmCC
+        iVBORw0KGgoAAAANSUhEUgAAADAAAAAwCAYAAABXAvmHAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAeYSURBVGhD7Zn7U1VVFMf9O2qcxplIdDQfjfK6Fy7vh2CBSKPpmKWlk6aO6ZCFEmH91PRD/ViW
+        mQ8aXygyPOUR3pAAEckw07JEHkKKgiGZu/1d56xz9zn33Mu5ZU0/sGe+s869F879fNdae5+9YcrkmByT
+        w3+8784VhfMzRcHcRf8b7ZqXKT5Zmy90xMDj3chsUb8qQnRsVPRapB71a6n29f5qXRtl6Ns1PrWsjtb0
+        okucXRUjmle6SN+scJOal7uFd5mmprw4n3I9pMZsTe+FRU1soGBOGsFeedOi/EhDP27TdPkNny5tiTKp
+        +/Vo0b3BRfpe6uJ6n7rWug1dWBNL6lwdK86/6CF1rPSIcyviSe3LNLUuTSADxZu2BzeBUpkMAFoxwPBs
+        wBZchwe4FZ4NqOAMD3A7eBYMvPXKhuAGtAro0DbggLaDV8ER7eAZuutlLXLG1ax3vKCJs96am6QpJ8mZ
+        AUxeMqCDqwYAzeC2BgBvA25tFxWc4VVwlgEfigHTHLBknqH/jTE20Cea8zxmcAnNasl2akAuWaiAFRzX
+        nG2M66Ul4kbZYVMMpIk+76suIwMVWS7hzfEYBgDNas5KDqECcplE9tWsU5vI1mADgLIa4PesCvYzbGCk
+        r08cT4uh5ZIzzuCkjBTnFcCaroIbBvQ+Vw08CvXXVRgGGrJkC0kDBrgub1qa8wpYDfDkZGH0VJaSRq5d
+        odehjrGBXjHU5rU1YIDLrEOAd25AVgArhpp5qwkMwOOLx0dHxdGcZ0RZ7kJNSxaKE9lmHV8slRnpkwT1
+        7txKfY/7DHxdSwaOJLlEfUaCyQDDk4FpLmcVwFbALvMsDPRtX225+PPBuOjxVov+M7VioLlW3GxuEDe9
+        9SbhM/UauvVdp/ito4XuM+itMxlQoaEzyZqcGZAVwFodyACqg4Hss253nSMBCuLXVqmfDbWfNX6fDRyO
+        d4m61EQTfFNCOsEjhlQBwOKBxFF9mmIMNFSSMAdQhYAav2/7PtoHFcA9Bs82agbi3KI2OcmUdYCzHFeg
+        9aUYP3B+ohoGZN+iJTAHypYlibLlCVrUdTIv2VBpdoqfvEUFZAL3GWw5I0Z6NQPV8alG5ln1rkzR6Amh
+        Atj2quC8BeiSexgIA72OzCGbVyuOGauSql/LT/hF1s3WNjHc3Un3QTuhAiXRcWTACs9yXAHVgLqHATx2
+        jhjIGmvk58vBJdvMiPr18KUuSgB+H62ECsAAQBncaqB4WrRzA1ZwiDdfGFjDoYcPH4qxO8Oyle74Ce/z
+        Z1ocNeKDsXvi7pVuusetC21k4FCUR1TFaBVQwUnRIVQA21o7cNUAsoYvBszBlAhxND1SHEmJpjUeEUsi
+        C6sL+ptV4naLxm3bxf3bQ3Sf2xfPUwvBgB346UhNjucAjnicfRUc212YwwA8lkPMgb72FjHY1kowiIGE
+        vmcNX9ZaCvdBO6ECBxbEUwVU+NoFWUYsnup2VgFsa1VwiA8b2O5iYAKS8OUSZPT6T0bka5bt66s/GPdA
+        K6ECMFARIdtHyTrAWc4M6BVgcD5oqIcNMiDBIbTB3xmYF/duXNMSgAkuK7B/XgIZUMGr5z5nxJArYAeP
+        Yx4GMogvBsh+T6QoiY+mXv/Kowl9bkiuLtDBqFhxICKOVLc5X/wxNqJlH5WRBr6ck2iAs2rmLyZ45wZQ
+        AWmAj3kELQ8XHCEyoC+LmAM9DXWk3vp6P/Wc9kVVgx0XaEeK+6Cl7t7QDJyan2FkXIV3bAB/lcCpiDOu
+        gtPxbkkiGeBeh8aG+kOXhOffRyvBwBezkgiUDaiqnB1CBXAqMoErBnBKwsCXPirBDBtABezgK2ZkhzAH
+        5F7cmnn1iIdBGezvMWIwqT/7+2CfUQVc82vMgb0z5D5qdqYJnOERi6Y6fA7Qsc4CzvBsgL9YgwDYxMKK
+        hSfx8C89fupt7aQKlOoGGBqRVfx4rLMK8LkU0IgMzkc8DMATUIBo9x62D027PxR7ZsUTLISssw7NTBfl
+        4f7gEN533EI4FakZt55NMQA0PnLLgOXrYBFng6Z3PhBVyzeKfm+7Se2FH1P27QycejKX5NiAN10CB4D3
+        pqaSAQCFKiy59dt2i8b1BXSN5wDixT2HKfvHZ2SZwBmeo+NVCMc6P3BdOCWRAfkAAwCiEzFszaZCwwB2
+        sk1FH4lPw2T7PJUuTob7Mq+CsxwZwHOADVjB+YiHAaBQBeDKV3eQAcyH6nU7/eDtwFnOJrGsQE2C9ock
+        FR7grH8yylZuFdXPbxE1eZvF/rB0Ax6A6H9EOwMnn1jqvAJ8LrWC41wKYctbIneO2D3um+chYSO2d7ZZ
+        n89MpNXls3BNyPa+6aniSHgmQR+bnkUR4IGyXjbNZ6DoMYdzAAbUlgE0orpPx66xfIEmPD1ZJ+b6VDpn
+        Ea0sECYoBGCGJoXl+EGzAA0DkGMDXAHOOoBhwIDXDfB+Xd36YvPF4qdp1dPPmp6miGrGrSY44wzO8CFV
+        oMqdQvAN7gw/cIZn6InArWs6A7MBq6zQqhwZwL8ycfbEH1IphiBMskDRJLmakPhafS+INk+NELt2vB3c
+        AI/iDVtF/up15FiN1uv/SvjOQqfwk2NyOB1TpvwFRGTr7tNAiigAAAAASUVORK5CYII=
 </value>
   </data>
   <data name="btnReddit.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
@@ -234,35 +231,34 @@ Pressed Highlight Color=$0</value>
   </data>
   <data name="btnReddit.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADdcAAA3XAUIom3gAAAAZdEVYdFNvZnR3YXJlAHd3dy5pbmtzY2FwZS5vcmeb7jwa
-        AAAGBklEQVRYR8WXf2wTZRjHCwqiiL9QiMQE/xISEqLB+JckM5CYmECM0QRCE/136CLYzCxDSdH+uvZ6
-        17VdunejW2Ewxu+gKBEImUQMomSTX+tm3ChD1tLu1t7drtva7vV5rmu7rtet/KNv8tlu773P9/k+7/vc
-        tdNRSv9XNCf/SzQnEaPRuIJ3OzbbnfaPGMa0w+Yw6+eCYa07WJ790Nng3GSxWJZraWqhOclxzJutrS3b
-        I7GIPp1O62GuItLpCf2DBw/0La1N291u6xswp6k/k5IJq9X6akdHYDsmTiZlvSAIQKwiEglBjcHYdtBg
-        WXb1bP3ZlEw0eJ3vyXJiOnlxguAAVHf+L73x6E39183ndvKEMLyb9zJ2M5kPu8PSxLrsLNfAfo5F5vKV
-        GMDzxgqwmmz1BS72DOnPXw/pO0907g0E/L5INEJgLYG4ikinJ0k4HCYt/iYvzzMfwFypAWwo+A0GEpp0
-        Xe7afeToIV8mkyHJ5BiJxwUiCCMVIYqCGoOxhw4HvAz0WlkDsixr0ryfcJIkgpBUkqBvMEz8F/qJsfMW
-        qWvvId4f+0hXz1DJOowVQcPlZr8qawB7QAs8S6xAFONq9TO5BMl+uh4iA/cjJBSOkpNXBoihtZv0D0WK
-        1mEsakBv+AqJbaa3oUEusZxdtNnNUwCdC8ZhoZ5Gl3KgvXXoxs0bp0RRBOFiwlGB7AYD534PldyDnGpz
-        qsl5l4NvC7QoD6MRmkqlYKqykUpN0nB4mPoDzakz35/uliSJ5BDiIvGc7SOmE7dIZCSen88B4VkDsOXb
-        DnccTMKWUEUZo/H4KIVHriISiVE1BmM7OttTV369fBGbTBAlwp3pVYkI2C9jJeQN8A0sOBdBSKajoyNF
-        BO9CdRf66b7OmxSaijb+EKRdf94rWYexopSg+1tJLJlMkgvd90n94RuqEfxbi7wBOMvU1NQUVBNXq5/J
-        pZ57FJqK/n3/IQ0NRyk0FTW0ddP+e5GidRiLGnbWmhkfHyfHrgwS68nbBK/LUTgCaCgcopiYl+GoQL8A
-        A+f+CJXcw4Fa+LKRoMK4lFRfPOWA5cUGZFmaE2gq6jkbpKbjtyg0Vcl9HKiVyaQJ/10fYWAH8LocsBwN
-        +PIGsJnKMZqQqfNMr0pESGiuwZE1kFHPHx8/vNYClqqPIs87THkD0BhlOd/9DwVROirKmvcRHDkDcwHL
-        4AjSBF7nXqNxz1t5AxMT42U59stdCk2leS8HjmktzcQ5BkODPpeb85jNe9/V6XSL8wbwpVIOSUnSuKRo
-        3suBA7VOnDrunZzMNtns5LBThOVs5q1bt66E5EuARepjiMHQGGXhvw9S26k7mvdy4ACtdE1N9WYnxzQE
-        g3d8MFVkBI3BB9C+6eRPqAYaPFyPoijqc1wOPH98/LTuITigqaiTsw+A6PKNGze+bLNZqtsCfq80ln3t
-        5kxwLjuXT67TPY5fQD4+euyIAlKa4vOBA5oKXsWHknV1tZ+A6HPAMmDprtqdrzucNse1a1cbMTkaYTnG
-        t27dusVqcp1uIaB7DLbMc7C9TYHPatjOjCo6c2glzjF4dzANTTVm/GZPPWg9DzwLLAVwm5esWbNmmdlm
-        3uZtcntHRqKEwLeh6upqXLcQpOEXGAAW19d/ucnpcvzM8vYYNFP+4xiaSoGz0zSCRwcVDWzZsmUtaKCo
-        WjmAW4xVIrjViwwGw2on7zDi28/EmvJfVnHgNuAidIzBzwAo9iKwsrZ216eQROzr681/TucMoDGX29k7
-        HfM08CSAybEoBLWRBQiELmAY8zsWp+U1uM4aUH9M7wKAAiiE25gz8VJVVdVaG2M+HTjgV+QxGUIKJqCp
-        YtMxGIsa6tZWSvZH1iE2BbrPmcCqsKHQyAvA8l2Gz96H3Rj+7drVCUyOA/5OrVq16im4r1aOeo9C4aJg
-        AqvA40BRNILnimZU1q9fv8JiN7sbfR4lFovSZr9PqampeQXuPXJypHSi2AhWhWZwV9AQgtdL6uoMGziX
-        4zY2qpW1bpitUymakwgMNIINhP2BhrIvjkJzLYB/YBeCgRqr49sqLY35obp/Af8sbIxFO8G3AAAAAElF
-        TkSuQmCC
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAN
+        1wAADdcBQiibeAAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAAYGSURBVFhHxZd/
+        bBNlGMcLCqKIv1CIxAT/EhISosH4lyQzkJiYQIzRBEIT/XfoItjMLENJ0f669nrXtV26d6NbYTDG76Ao
+        EQiZRAyiZJNf62bcKEPW0u7W3t2u29ru9Xmua7uu1638o2/y2W7vvc/3+T7v+9y101FK/1c0J/9LNCcR
+        o9G4gnc7Ntud9o8YxrTD5jDr54JhrTtYnv3Q2eDcZLFYlmtpaqE5yXHMm62tLdsjsYg+nU7rYa4i0ukJ
+        /YMHD/QtrU3b3W7rGzCnqT+Tkgmr1fpqR0dgOyZOJmW9IAhArCISCUGNwdh20GBZdvVs/dmUTDR4ne/J
+        cmI6eXGC4ABUd/4vvfHoTf3Xzed28oQwvJv3MnYzmQ+7w9LEuuws18B+jkXm8pUYwPPGCrCabPUFLvYM
+        6c9fD+k7T3TuDQT8vkg0QmAtgbiKSKcnSTgcJi3+Ji/PMx/AXKkBbCj4DQYSmnRd7tp95OghXyaTIcnk
+        GInHBSIIIxUhioIag7GHDge8DPRaWQOyLGvSvJ9wkiSCkFSSoG8wTPwX+omx8xapa+8h3h/7SFfPUMk6
+        jBVBw+VmvyprAHtACzxLrEAU42r1M7kEyX66HiID9yMkFI6Sk1cGiKG1m/QPRYrWYSxqQG/4Coltpreh
+        QS6xnF202c1TAJ0LxmGhnkaXcqC9dejGzRunRFEE4WLCUYHsBgPnfg+V3IOcanOqyXmXg28LtCgPoxGa
+        SqVgqrKRSk3ScHiY+gPNqTPfn+6WJInkEOIi8ZztI6YTt0hkJJ6fzwHhWQOw5dsOdxxMwpZQRRmj8fgo
+        hUeuIhKJUTUGYzs621NXfr18EZtMECXCnelViQjYL2Ml5A3wDSw4F0FIpqOjI0UE70J1F/rpvs6bFJqK
+        Nv4QpF1/3itZh7GilKD7W0ksmUySC933Sf3hG6oR/FuLvAE4y9TU1BRUE1ern8mlnnsUmor+ff8hDQ1H
+        KTQVNbR10/57kaJ1GIsadtaaGR8fJ8euDBLrydsEr8tROAJoKByimJiX4ahAvwAD5/4IldzDgVr4spGg
+        wriUVF885YDlxQZkWZoTaCrqORukpuO3KDRVyX0cqJXJpAn/XR9hYAfwuhywHA348gawmcoxmpCp80yv
+        SkRIaK7BkTWQUc8fHz+81gKWqo8izztMeQPQGGU53/0PBVE6Ksqa9xEcOQNzAcvgCNIEXudeo3HPW3kD
+        ExPjZTn2y10KTaV5LweOaS3NxDkGQ4M+l5vzmM1739XpdIvzBvClUg5JSdK4pGjey4EDtU6cOu6dnMw2
+        2ezksFOE5WzmrVu3roTkS4BF6mOIwdAYZeG/D1LbqTua93LgAK10TU31ZifHNASDd3wwVWQEjcEH0L7p
+        5E+oBho8XI+iKOpzXA48f3z8tO4hOKCpqJOzD4Do8o0bN75ss1mq2wJ+rzSWfe3mTHAuO5dPrtM9jl9A
+        Pj567IgCUpri84EDmgpexYeSdXW1n4Doc8AyYOmu2p2vO5w2x7VrVxsxORphOca3bt26xWpynW4hoHsM
+        tsxzsL1Ngc9q2M6MKjpzaCXOMXh3MA1NNWb8Zk89aD0PPAssBXCbl6xZs2aZ2Wbe5m1ye0dGooTAt6Hq
+        6mpctxCk4RcYABbX13+5yely/Mzy9hg0U/7jGJpKgbPTNIJHBxUNbNmyZS1ooKhaOYBbjFUiuNWLDAbD
+        aifvMOLbz8Sa8l9WceA24CJ0jMHPACj2IrCytnbXp5BE7OvrzX9O5wygMZfb2Tsd8zTwJIDJsSgEtZEF
+        CIQuYBjzOxan5TW4zhpQf0zvAoACKITbmDPxUlVV1VobYz4dOOBX5DEZQgomoKli0zEYixrq1lZK9kfW
+        ITYFus+ZwKqwodDIC8DyXYbP3ofdGP7t2tUJTI4D/k6tWrXqKbivVo56j0LhomACq8DjQFE0gueKZlTW
+        r1+/wmI3uxt9HiUWi9Jmv0+pqal5Be49cnKkdKLYCFaFZnBX0BCC10vq6gwbOJfjNjaqlbVumK1TKZqT
+        CAw0gg2E/YGGsi+OQnMtgH9gF4KBGqvj2yotjfmhun8B/yxsjEU7wbcAAAAASUVORK5CYII=
 </value>
   </data>
   <data name="btnReddit.Style" xml:space="preserve">
@@ -301,42 +297,42 @@ Pressed Highlight Color=$0</value>
   </data>
   <data name="btnSource.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsQAAA7EAZUrDhsAAAAZdEVYdFNvZnR3YXJlAHd3dy5pbmtzY2FwZS5vcmeb7jwa
-        AAAAG3RFWHRUaXRsZQBBZHdhaXRhIEljb24gVGVtcGxhdGW1u+c/AAAAGHRFWHRBdXRob3IAR05PTUUg
-        RGVzaWduIFRlYW1gjnZ+AAAAUnRFWHRDb3B5cmlnaHQAQ0MgQXR0cmlidXRpb24tU2hhcmVBbGlrZSBo
-        dHRwOi8vY3JlYXRpdmVjb21tb25zLm9yZy9saWNlbnNlcy9ieS1zYS80LjAvw1RiBQAABwxJREFUWEe9
-        l3lMm/cdxlPv6tQdUv6uiLROO5RVm6pp6q6sR5q0acMgWYKytbBkyr10BEJCAwYSgjnMfRkbA8YYfGFs
-        Dhtf2MZgjDGOzWEMIQEChIZAFglo5wTVz37va0yXrO3ICn2kj+z3fX/v+zzfr7+v/Xrbl1EawJDJ8LW1
-        za9Uzwj03nCZ7fa43HZ7ptboiyH7GMFDWy9GZavzT4326Ue+yY8wPL4CpWPmk2rNwGnqWHDJ1onBa3VF
-        KuzT/tGpj3Bryg+bcxke3zIVIlCjHYil1gSXbr4YHIUjUtY54R+5tYLJ6YcYGPmYDnB9aAUO9yIau24H
-        qlrcWxKCwZF1RUoMY37v+BImpv4FNzGluD64AqN1ARrjLHr670FmuhmoVDg3NQSjVGSJrNd4/YO+Bxif
-        +BguzxJNvzuIWj8HYcMYNPpZ9Lr+CbF2NFAu6dmUEIyCSsMBYfOA3+O9j7Eby3D2P6Dpo3A+gINg770P
-        k/ku6sXjMHTcg633HkStw4FykfVLhWDk8/SRNY3X/S7PPHy+JTgc99FLzHp7F2ns9kX09CzCap1HXd0w
-        wYfGxhnodHdh7b4LocITKK4y/18hGLnFbQeqxH3+vv4PMTz0AD3d87CF6JpHNwUx7rLehbnjDqr4LtRU
-        DUAmmaTpcyxgcGgRNRJnoJhreKoQDHaRKrJS0O139M5i0LOIrs65IJY5WM0Ud9BpCmIh5mYygO1tk+Bx
-        eiGtH6cxaKcxRmbG7Z4Hv9YWKCjVbCgEI5OtiKzgWfzdXbfhds6j0zizjsVA0M/ArJ+GWTcN0xpNklGU
-        F1qgU4/T2xrVBAavL2CYhB8hXei2TIPHtwby8lq+MASDlS45UF5m9FtNt+CyfwiTdhKm9k/p0AQxaiZg
-        VE/A0BakRTYGbqEVFuNN3Bi5j9FhYjy4AJt5Bo11I1CRgG1NPlRwOgLsbOVnhnjmWkrD/tJC3SNjuw8O
-        6ywMrTc/peUm9ARd83gQ1Ti0yiBNDV5IBR6UsTvQKOrHDe8ifEML0JI19byBdRR1XijFwygr1H1CCj1K
-        PB8L8Wweq8mjUQ6ixzQFnXKURtu0hmIU7TQ+aBoJch/U8hG0iIdQWdCJNtkAxNV2DPbPYXToHlokHog4
-        rv9CXjNAwrqQn9k8u3Pnzu+sedN6LiOp3ikVdMOsJl8oMi+NWkoxTNMmCdJKTFsbhiCtJAPH70MD1wGX
-        bRpDzjsYds2R830oTG8Bl21CXWnfY0h5Lgg5XchKkU5u3779e2vetL57eP/ZwzlM6YqQ04EO1QiUJGmL
-        yIPmuiAqoRuqWjcU1f2Q851gJ8uRnSRFfqoSNUVGeHpn4LGTYcvRIy9FQWgCJ1OP2sIeCApsqC+1Q1Bk
-        RnaK9FF01IWTxPP7Qeugvk54/s1XjsSwLomWa0sM4OdrUVtkgZhjA59tgKSiB9wsDTIT68mFNchJkiD7
-        AzGNtLILbtsUjEovCogxO0mG3CQ58kjIolQVBHkWOhgrsWH1SPi5BOK1g/ANyjgkaiC+Sdjx1q4/R187
-        L1jmsJSoYqtRyCSVXqpHEbMRuZeJ6UURshLqaMrSldDJ3bBpR+HqvAV5hQ3sRDFZq0Rpagt9XgE5Jz9Z
-        iox44WrUO2cp8xcI31rzfEzUDupA2N7fRUVf+TtvuThVimKmGKwLNciMF9Cw4mrWqEZRigR6eT8cxjE4
-        TTdQxdKiKkOPapaBfi1PbUbOBSGunuOvRr15mjL/AeHba16fqVCIHXtePhiTepKznJ9Yh/xEIdLPVeLa
-        +/w1qPdBUs+Uo1vthV3rA4dUXXmlHdxUNaENuXEiXD1dsXpo94lQ5c8S/uczZOjjCNv9q8ho5tGS5ax/
-        8JEZy8MVYnb1LIeGek+RcqoE1tYB2NTklkxrA5fZDM5lBXJjRUg5Vrp68NVjocop88+t/Emtd+L1X4TH
-        XH63YCn9BDE/VYrU48VIO1FCk39RAE2tDValB1aVB7xkJUriJcg6U4PkvxStRvw+5iK5BlU51fanfnqm
-        QlCTGvbaz/e/d/FQzlJydD6S/8om5IF5LA9Z73MgL9NBW2eDUeIgAWTI/BsXiYdyVyN/HR2qnOrmhit/
-        UqFOhO3a+VZ0wh9ZS4mHs3HpSCaSotmEHCTH5KCC2QAVtwPF8UJcishaDf/lkZD5Fw7cRkVdgL5F//DT
-        ve/FvZ2+lBCRjoRDV0mQDJr040UoOS9A/L5rq++8FEWZb3jgNqr1Trz2431HY99IWYl/Ow1xEUwkkQC5
-        pypwfk/aw30vHowja5564DaqUIgdu36459i5V5JWYvcy8UFEBmJfZT584yfh/2m+ZX/X1j+OXS/sjj7+
-        m/Oek7+N973+o/1nyD7KnAq46ZU/qVAnnif8jPAiIYywJW3/PFFGVJufI1C/69SP2Vdmvonatu3fnr5j
-        NUSrgwsAAAAASUVORK5CYII=
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        xAAADsQBlSsOGwAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAAAbdEVYdFRpdGxl
+        AEFkd2FpdGEgSWNvbiBUZW1wbGF0ZbW75z8AAAAYdEVYdEF1dGhvcgBHTk9NRSBEZXNpZ24gVGVhbWCO
+        dn4AAABSdEVYdENvcHlyaWdodABDQyBBdHRyaWJ1dGlvbi1TaGFyZUFsaWtlIGh0dHA6Ly9jcmVhdGl2
+        ZWNvbW1vbnMub3JnL2xpY2Vuc2VzL2J5LXNhLzQuMC/DVGIFAAAHDElEQVRYR72XeUyb9x3GU+/q1B1S
+        /q6ItE47lFWbqmnqrqxHmrRpwyBZgrK1sGTKvXQEQkIDBhKCOcx9GRsDxhh8YWwOG1/YxmCMMY7NYQwh
+        AQKEhkAWCWjnBNXPfu9rTJes7cgKfaSP7Pd9f+/7PN+vv6/9etuXURrAkMnwtbXNr1TPCPTecJnt9rjc
+        dnum1uiLIfsYwUNbL0Zlq/NPjfbpR77JjzA8vgKlY+aTas3AaepYcMnWicFrdUUq7NP+0amPcGvKD5tz
+        GR7fMhUiUKMdiKXWBJduvhgchSNS1jnhH7m1gsnphxgY+ZgOcH1oBQ73Ihq7bgeqWtxbEoLBkXVFSgxj
+        fu/4Eiam/gU3MaW4PrgCo3UBGuMsevrvQWa6GahUODc1BKNUZIms13j9g74HGJ/4GC7PEk2/O4haPwdh
+        wxg0+ln0uv4JsXY0UC7p2ZQQjIJKwwFh84Df472PsRvLcPY/oOmjcD6Ag2DvvQ+T+S7qxeMwdNyDrfce
+        RK3DgXKR9UuFYOTz9JE1jdf9Ls88fL4lOBz30UvMensXaez2RfT0LMJqnUdd3TDBh8bGGeh0d2Htvguh
+        whMorjL/XyEYucVtB6rEff6+/g8xPPQAPd3zsIXomkc3BTHust6FueMOqvgu1FQNQCaZpOlzLGBwaBE1
+        EmegmGt4qhAMdpEqslLQ7Xf0zmLQs4iuzrkgljlYzRR30GkKYiHmZjKA7W2T4HF6Ia0fpzFopzFGZsbt
+        nge/1hYoKNVsKAQjk62IrOBZ/N1dt+F2zqPTOLOOxUDQz8Csn4ZZNw3TGk2SUZQXWqBTj9PbGtUEBq8v
+        YJiEHyFd6LZMg8e3BvLyWr4wBIOVLjlQXmb0W0234LJ/CJN2Eqb2T+nQBDFqJmBUT8DQFqRFNgZuoRUW
+        403cGLmP0WFiPLgAm3kGjXUjUJGAbU0+VHA6Auxs5WeGeOZaSsP+0kLdI2O7Dw7rLAytNz+l5Sb0BF3z
+        eBDVOLTKIE0NXkgFHpSxO9Ao6scN7yJ8QwvQkjX1vIF1FHVeKMXDKCvUfUIKPUo8HwvxbB6ryaNRDqLH
+        NAWdcpRG27SGYhTtND5oGglyH9TyEbSIh1BZ0Ik22QDE1XYM9s9hdOgeWiQeiDiu/0JeM0DCupCf2Ty7
+        c+fO76x503ouI6neKRV0w6wmXygyL41aSjFM0yYJ0kpMWxuGIK0kA8fvQwPXAZdtGkPOOxh2zZHzfShM
+        bwGXbUJdad9jSHkuCDldyEqRTm7fvv17a960vnt4/9nDOUzpipDTgQ7VCJQkaYvIg+a6ICqhG6paNxTV
+        /ZDznWAny5GdJEV+qhI1RUZ4emfgsZNhy9EjL0VBaAInU4/awh4ICmyoL7VDUGRGdor0UXTUhZPE8/tB
+        66C+Tnj+zVeOxLAuiZZrSwzg52tRW2SBmGMDn22ApKIH3CwNMhPryYU1yEmSIPsDMY20sgtu2xSMSi8K
+        iDE7SYbcJDnySMiiVBUEeRY6GCuxYfVI+LkE4rWD8A3KOCRqIL5J2PHWrj9HXzsvWOawlKhiq1HIJJVe
+        qkcRsxG5l4npRRGyEupoytKV0MndsGlH4eq8BXmFDexEMVmrRGlqC31eATknP1mKjHjhatQ7ZynzFwjf
+        WvN8TNQO6kDY3t9FRV/5O2+5OFWKYqYYrAs1yIwX0LDiataoRlGKBHp5PxzGMThNN1DF0qIqQ49qloF+
+        LU9tRs4FIa6e469GvXmaMv8B4dtrXp+pUIgde14+GJN6krOcn1iH/EQh0s9V4tr7/DWo90FSz5SjW+2F
+        XesDh1RdeaUd3FQ1oQ25cSJcPV2xemj3iVDlzxL+5zNk6OMI2/2ryGjm0ZLlrH/wkRnLwxVidvUsh4Z6
+        T5FyqgTW1gHY1OSWTGsDl9kMzmUFcmNFSDlWunrw1WOhyinzz638Sa134vVfhMdcfrdgKf0EMT9VitTj
+        xUg7UUKTf1EATa0NVqUHVpUHvGQlSuIlyDpTg+S/FK1G/D7mIrkGVTnV9qd+eqZCUJMa9trP97938VDO
+        UnJ0PpL/yibkgXksD1nvcyAv00FbZ4NR4iABZMj8GxeJh3JXI38dHaqc6uaGK39SoU6E7dr5VnTCH1lL
+        iYezcelIJpKi2YQcJMfkoILZABW3A8XxQlyKyFoN/+WRkPkXDtxGRV2AvkX/8NO978W9nb6UEJGOhENX
+        SZAMmvTjRSg5L0D8vmur77wURZlveOA2qvVOvPbjfUdj30hZiX87DXERTCSRALmnKnB+T9rDfS8ejCNr
+        nnrgNqpQiB27frjn2LlXklZi9zLxQUQGYl9lPnzjJ+H/ab5lf9fWP45dL+yOPv6b856Tv433vf6j/WfI
+        PsqcCrjplT+pUCeeJ/yM8CIhjLAlbf88UUZUm58jUL/r1I/ZV2a+idq27d+evmM1RKuDCwAAAABJRU5E
+        rkJggg==
 </value>
   </data>
   <data name="btnSource.Style" xml:space="preserve">
